--- a/Project1_numerical_methods.ipynb
+++ b/Project1_numerical_methods.ipynb
@@ -58,7 +58,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "bQJdpTTE5wOQ"
       },
@@ -84,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "0-9DGnW65wOR"
       },
@@ -137,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "KRXOP_KR5wOR"
       },
@@ -196,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "Z7eqXuoY5wOR"
       },
@@ -222,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "mHatFZjk5wOS"
       },
@@ -256,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "UmccFq585wOS",
         "outputId": "36fc9421-7ac1-4d17-b2bc-7bf355985f7c",
@@ -301,7 +301,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "A2bPKtdH5wOS",
         "outputId": "c50b9495-f20e-47ff-f696-d05da04d365e",
@@ -425,7 +425,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +475,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,7 +512,7 @@
           "height": 582
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,7 +570,7 @@
           "height": 376
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -615,7 +615,7 @@
           "height": 449
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -659,7 +659,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "metadata": {
         "id": "zRV2oWgA5wOT",
         "outputId": "a3f532fa-707d-4c47-fb53-bb68dd663d95",
@@ -750,7 +750,7 @@
           "height": 490
         }
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -807,7 +807,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -850,9 +850,7 @@
         "\n",
         "If we were to have 1% error as the error tolerance in this case, the models would only be valid in the range -0.64<x<0.64 in the CN model, and -0.66<x<0.66 in the Euler model.\n",
         "\n",
-        "Although CN is more stable at a range of variable values, it produces marginally more error than Euler. Overall, I still recommend CN as the better model as error is marginal in either case (<1% between them) and Euler breaks down sooner.\n",
-        "\n",
-        "\n"
+        "Although CN is more stable at a range of variable values, it produces marginally more error than Euler. Overall, I still recommend CN as the better model as error is marginal in either case (<1% between them) and Euler breaks down sooner. Furthermore, the CN method runs quicker than the Euler method (0.15s vs 0.16s)"
       ]
     },
     {
